VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.14.0:

-User experience improvements for price charts with page zooming (now desktop editions only, notices atop chart sections on usage impacts)

-User experience improvements for Windows Desktop Edition CSV spreadsheet importing (error notice / logs now warns to run app as admin)

-New documentation, and revised documentation

-Other minor user experience improvements

-Revised default config

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.14.1:

-BUG FIX: Auto-installer script detects logged-in user properly now in ALL debian-based operating systems

-Distro information in system stats / system alert emails (see what 'flavor' the app server operating system is)

-Auto-installer support for DietPI OS

-Updated documentation

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.15.0:

-Revised auto-installer

-Easter Egg in documentation files :)

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------














