@@ -5373,6 +5373,8 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 5.15.0:
 
+-Better upgrade version detection precision
+
 -Revised auto-installer
 
 -Easter Egg in documentation files :)
